force-app/main/default/objects/Product_Template_Name_Map__mdt/Product_Template_Name_Map__mdt.object-meta.xml
<CustomObject>
    <description>This contains a map of String, String which represents the field label and the API name for the Field Name picklist on the Product Template Field object.

NOTE: The Field Label entries in this list must be kept in sync with the picklist values in the Field_Name__c field of the Product_Template_Field__c object.</description>
    <label>Product Template Name Map</label>
    <pluralLabel>Product Template Name Maps</pluralLabel>
</CustomObject>