force-app/main/default/objects/Product_Template_Name_Map__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The field API Name to be used in queries selecting from Opportunity Line Item,  i.e. "Product2.Type".</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>