force-app/main/default/objects/Product_Template_Name_Map__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>The field label shown in the GUI, i.e. "Product: Type".</description>
    <label>Field Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>